--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -12,6 +12,7 @@
   border-top: 1px solid @gray;
   background-color: @gray-dark;
   position: relative;
+  z-index: 0;
   .pl-timeline-header {
     display: flex;
     flex-shrink: 0;
@@ -133,6 +134,11 @@
   .pl-timeline-layers {
     flex-grow: 1;
     overflow: auto;
+    &.pl-scrolling .pl-timeline-layer {
+      &.pl-sticky, &.pl-stuck {
+        pointer-events: none;
+      }
+    }
   }
   .pl-timeline-track {
     pointer-events: none;
@@ -141,6 +147,7 @@
     left: @library-width + @padding-small;
     right: @padding-small;
     bottom: 0;
+    z-index: 1;
     &:before {
       content: '';
       width: 1px;
