--- a/src/components/timeline-layer.less
+++ b/src/components/timeline-layer.less
@@ -1,5 +1,4 @@
 @import (reference) './library';
-@import './control';
 
 .pl-timeline-layer {
   display: flex;
@@ -8,14 +7,14 @@
     margin-top: @padding-small * -1;
   }
   &.pl-selected:not(.pl-hidden) {
-    .pl-timeline-layer-top .pl-control {
+    .pl-timeline-layer-top .pl-timeline-layer-control {
       color: white;
     }
     .pl-timeline-layer-bar {
       background-color: @gray-lightest;
     }
   }
-  &.pl-hidden .pl-timeline-layer-top .pl-control .pl-text-field {
+  &.pl-hidden .pl-timeline-layer-top .pl-timeline-layer-control .pl-text-field {
     text-decoration: line-through;
     opacity: 0.5;
   }
@@ -39,9 +38,19 @@
     }
   }
 
-  .pl-control {
+  .pl-timeline-layer-control {
+    display: flex;
+    justify-content: space-between;
     flex-shrink: 0;
     width: @library-width;
+    padding: 0 @padding-small;
+    font-size: @font-size-small;
+    line-height: @padding-base;
+    color: @gray-lightest;
+    span {
+      .pl-ellipsized;
+      flex-grow: 1;
+    }
     .pl-text-field {
       box-shadow: 0 1px @gray-light;
       position: relative;
@@ -61,6 +70,33 @@
         background-color: @shadow;
         &:before {
           transform: scaleX(1);
+        }
+      }
+    }
+    .pl-timeline-layer-control-actions {
+      display: flex;
+      align-items: center;
+      flex-shrink: 0;
+      .pl-timeline-layer-control-action {
+        margin-left: @padding-small;
+        &.pl-clickable {
+          cursor: pointer;
+          &:hover .pl-icon {
+            fill: white;
+          }
+
+          .pl-icon {
+            fill: @gray-lightest;
+            &.pl-active {
+              fill: @brand-primary;
+            }
+          }
+        }
+
+        .pl-icon {
+          width: @padding-base;
+          height: @padding-base;
+          fill: @gray-light;
         }
       }
     }
@@ -96,7 +132,7 @@
     display: flex;
     flex-grow: 1;
     padding: @padding-small 0;
-    .pl-control .pl-text-field {
+    .pl-timeline-layer-control .pl-text-field {
       padding-right: @padding-smaller;
     }
   }
@@ -111,7 +147,7 @@
         margin-bottom: @padding-smaller;
       }
 
-      .pl-control {
+      .pl-timeline-layer-control {
         font-size: @font-size-smaller;
         span {
           color: @gray-light;
