--- a/src/components/timeline-layer.less
+++ b/src/components/timeline-layer.less
@@ -6,11 +6,11 @@
   &:not(:first-child) {
     margin-top: @padding-small * -1;
   }
-  &.pl-selected:not(.pl-hidden) {
-    .pl-timeline-layer-top .pl-timeline-layer-control {
+  &.pl-selected:not(.pl-hidden) .pl-timeline-layer-top {
+    .pl-timeline-layer-control {
       color: white;
     }
-    .pl-timeline-layer-bar {
+    .pl-timeline-layer-top-bar {
       background-color: @gray-lightest;
     }
   }
@@ -106,34 +106,37 @@
     margin: 0 @padding-small;
     position: relative;
   }
-  .pl-timeline-layer-bar {
-    height: @padding-base;
-    border-radius: @border-radius-small;
-    box-shadow: 0 1px 1px @shadow-dark;
-    background-color: @gray-light;
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    left: 0;
-    .pl-timeline-layer-bar-handle {
-      width: 5px;
-      height: 100%;
-      cursor: ew-resize;
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translateX(-50%);
-      &:last-child {
-        left: 100%;
-      }
-    }
-  }
   .pl-timeline-layer-top {
     display: flex;
     flex-grow: 1;
-    padding: @padding-small 0;
-    .pl-timeline-layer-control .pl-text-field {
-      padding-right: @padding-smaller;
+    .pl-timeline-layer-control {
+      padding: @padding-small;
+      .pl-text-field {
+        padding-right: @padding-smaller;
+      }
+    }
+    .pl-timeline-layer-top-bar {
+      height: @padding-base;
+      margin: @padding-small 0;
+      border-radius: @border-radius-small;
+      box-shadow: 0 1px 1px @shadow-dark;
+      background-color: @gray-light;
+      cursor: pointer;
+      position: absolute;
+      top: 0;
+      left: 0;
+      .pl-timeline-layer-bar-handle {
+        width: 5px;
+        height: 100%;
+        cursor: ew-resize;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: translateX(-50%);
+        &:last-child {
+          left: 100%;
+        }
+      }
     }
   }
   .pl-timeline-layer-properties {
