Use stickyLayerId instead of index

--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -131,6 +131,7 @@
   }
   .pl-timeline-layers {
     flex-grow: 1;
+    padding-top: @padding-small;
     overflow: auto;
     &.pl-scrolling .pl-timeline-layer {
       &.pl-sticky, &.pl-stuck {
