--- a/src/components/viewport-layer.less
+++ b/src/components/viewport-layer.less
@@ -1,17 +1,29 @@
-.pl-viewport-layer-box-shadow(@color) {
-  box-shadow: 0 0 0 0.5px @color, inset 0 0 0 0.5px @color;
-}
-
 .pl-viewport-layer {
   position: absolute;
   top: 0;
   left: 0;
+  &:before, &:after {
+    content: '';
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(-50%);
+  }
+  &:after {
+    top: 100%;
+  }
   &:hover {
-    .pl-viewport-layer-box-shadow(fade(red, 25%));
+    &:before, &:after, .pl-viewport-layer-handles:before, .pl-viewport-layer-handles:after {
+      background-color: fade(red, 25%);
+    }
   }
   &.pl-selected {
-    .pl-viewport-layer-box-shadow(red);
-    .pl-viewport-layer-anchor, .pl-viewport-layer-handles {
+    &:before, &:after, .pl-viewport-layer-handles:before, .pl-viewport-layer-handles:after {
+      background-color: red;
+    }
+    .pl-viewport-layer-anchor, .pl-viewport-layer-handles .pl-viewport-layer-handle {
       display: block;
     }
   }
@@ -20,7 +32,7 @@
     display: block;
     pointer-events: none;
   }
-  .pl-viewport-layer-anchor, .pl-viewport-layer-handles {
+  .pl-viewport-layer-anchor, .pl-viewport-layer-handles .pl-viewport-layer-handle {
     display: none;
   }
   .pl-viewport-layer-anchor {
@@ -46,25 +58,40 @@
       transform: translate(-50%, -50%) rotate(90deg);
     }
   }
-  .pl-viewport-layer-handles .pl-viewport-layer-handle {
-    width: 4px;
-    height: 4px;
-    background-color: red;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-    &:nth-child(1), &:nth-child(3) {
-      cursor: nwse-resize;
+  .pl-viewport-layer-handles {
+    &:before, &:after {
+      content: '';
+      width: 1px;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translateX(-50%);
     }
-    &:nth-child(2), &:nth-child(4) {
-      cursor: nesw-resize;
-    }
-    &:nth-child(3), &:nth-child(4) {
-      top: 100%;
-    }
-    &:nth-child(2), &:nth-child(3) {
+    &:after {
       left: 100%;
+    }
+
+    .pl-viewport-layer-handle {
+      width: 4px;
+      height: 4px;
+      background-color: red;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate(-50%, -50%);
+      &:nth-child(1), &:nth-child(3) {
+        cursor: nwse-resize;
+      }
+      &:nth-child(2), &:nth-child(4) {
+        cursor: nesw-resize;
+      }
+      &:nth-child(3), &:nth-child(4) {
+        top: 100%;
+      }
+      &:nth-child(2), &:nth-child(3) {
+        left: 100%;
+      }
     }
   }
 }
