--- a/src/components/app.less
+++ b/src/components/app.less
@@ -3,6 +3,9 @@
 @import './timeline';
 @import './viewport';
 
+@text-layer-color: blue;
+@image-layer-color: red;
+
 .pl-app {
   display: flex;
   flex-direction: column;
