--- a/src/components/viewport-layer.less
+++ b/src/components/viewport-layer.less
@@ -1,35 +1,44 @@
-.pl-viewport-layer-border {
-  content: '';
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 .pl-viewport-layer {
   position: absolute;
   top: 0;
   left: 0;
-  &:before, &:after {
-    .pl-viewport-layer-border;
-    width: 100%;
-    height: 1px;
-    transform: translateY(-50%);
-  }
-  &:after {
-    top: 100%;
-  }
-  &:hover {
-    &:before, &:after, .pl-viewport-layer-handles:before, .pl-viewport-layer-handles:after {
-      background-color: fade(red, 25%);
-    }
+  &:hover .pl-viewport-layer-borders {
+    opacity: 0.5;
   }
   &.pl-selected {
-    &:before, &:after, .pl-viewport-layer-handles:before, .pl-viewport-layer-handles:after {
-      background-color: red;
+    .pl-viewport-layer-borders {
+      opacity: 1;
     }
-    .pl-viewport-layer-anchor, .pl-viewport-layer-handles .pl-viewport-layer-handle {
+    .pl-viewport-layer-anchor, .pl-viewport-layer-handles {
       display: block;
+    }
+  }
+  &[type="text"] {
+    .pl-viewport-layer-borders .pl-viewport-layer-border {
+      background-color: @text-layer-color;
+    }
+    .pl-viewport-layer-anchor {
+      border-color: @text-layer-color;
+      &:before, &:after {
+        background-color: @text-layer-color;
+      }
+    }
+    .pl-viewport-layer-handles .pl-viewport-layer-handle {
+      background-color: @text-layer-color;
+    }
+  }
+  &[type="image"] {
+    .pl-viewport-layer-borders .pl-viewport-layer-border {
+      background-color: @image-layer-color;
+    }
+    .pl-viewport-layer-anchor {
+      border-color: @image-layer-color;
+      &:before, &:after {
+        background-color: @image-layer-color;
+      }
+    }
+    .pl-viewport-layer-handles .pl-viewport-layer-handle {
+      background-color: @image-layer-color;
     }
   }
 
@@ -37,13 +46,38 @@
     display: block;
     pointer-events: none;
   }
-  .pl-viewport-layer-anchor, .pl-viewport-layer-handles .pl-viewport-layer-handle {
+  .pl-viewport-layer-borders {
+    pointer-events: none;
+    opacity: 0;
+    .pl-viewport-layer-border {
+      position: absolute;
+      top: 0;
+      left: 0;
+      &:nth-child(odd) {
+        width: 100%;
+        height: 1px;
+        transform: translateY(-50%);
+      }
+      &:nth-child(even) {
+        width: 1px;
+        height: 100%;
+        transform: translateX(-50%);
+      }
+      &:nth-child(3) {
+        top: 100%;
+      }
+      &:nth-child(2) {
+        left: 100%;
+      }
+    }
+  }
+  .pl-viewport-layer-anchor, .pl-viewport-layer-handles {
     display: none;
   }
   .pl-viewport-layer-anchor {
     width: @padding-small;
     height: @padding-small;
-    border: 1px solid red;
+    border: 1px solid black;
     border-radius: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
@@ -51,7 +85,7 @@
       content: '';
       width: @padding-base;
       height: 1px;
-      background-color: red;
+      background-color: black;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -63,37 +97,25 @@
       transform: translate(-50%, -50%) rotate(90deg);
     }
   }
-  .pl-viewport-layer-handles {
-    &:before, &:after {
-      .pl-viewport-layer-border;
-      width: 1px;
-      height: 100%;
-      transform: translateX(-50%);
+  .pl-viewport-layer-handles .pl-viewport-layer-handle {
+    width: 4px;
+    height: 4px;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    &:nth-child(odd) {
+      cursor: nwse-resize;
     }
-    &:after {
+    &:nth-child(even) {
+      cursor: nesw-resize;
+    }
+    &:nth-child(n + 3) {
+      top: 100%;
+    }
+    &:nth-child(2), &:nth-child(3) {
       left: 100%;
-    }
-
-    .pl-viewport-layer-handle {
-      width: 4px;
-      height: 4px;
-      background-color: red;
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate(-50%, -50%);
-      &:nth-child(1), &:nth-child(3) {
-        cursor: nwse-resize;
-      }
-      &:nth-child(2), &:nth-child(4) {
-        cursor: nesw-resize;
-      }
-      &:nth-child(3), &:nth-child(4) {
-        top: 100%;
-      }
-      &:nth-child(2), &:nth-child(3) {
-        left: 100%;
-      }
     }
   }
 }
