--- a/src/components/library.less
+++ b/src/components/library.less
@@ -7,11 +7,9 @@
   border-right: 1px solid @shadow-dark;
   color: @gray-lightest;
   overflow: hidden;
-  .pl-library-preview, .pl-library-header {
-    flex-shrink: 0;
-  }
   .pl-library-preview {
     display: flex;
+    flex-shrink: 0;
     height: 4.75rem;
     .pl-library-preview-thumb {
       display: flex;
@@ -44,29 +42,10 @@
       }
     }
   }
-  .pl-library-header, .pl-library-assets .pl-library-asset {
-    display: flex;
-    align-items: center;
-    span {
-      display: block;
-      width: 50%;
-      padding: @padding-smaller @padding-small;
-      &:last-child {
-        flex-shrink: 0;
-        box-sizing: content-box;
-        width: 1rem;
-      }
-    }
-  }
-  .pl-library-header {
-    .pl-spaced;
-    border-top: 1px solid @shadow-dark;
-    box-shadow: 0 1px @shadow-dark;
-    font-size: @font-size-smaller;
-    background-color: @gray;
-  }
   .pl-library-assets {
     flex-grow: 1;
+    box-shadow: inset 0 1px @shadow-dark;
+    background-color: @gray-darker;
     position: relative;
     &.pl-highlighted {
       z-index: 1;
@@ -85,20 +64,33 @@
     }
 
     .pl-library-asset {
-      border-bottom: 1px solid @gray-darker;
-      font-size: @font-size-small;
+      display: flex;
+      align-items: center;
+      font-size: @font-size-smaller;
       cursor: pointer;
+      &:nth-child(2n) {
+        background-color: @shadow-light;
+      }
       &:hover {
         color: mix(@gray-lightest, white);
-        background-color: @shadow-light;
       }
       &.pl-selected {
         color: white;
         background-color: @shadow;
       }
 
-      span:first-child {
-        .pl-ellipsized;
+      span {
+        display: block;
+        padding: @padding-small;
+        &:first-child {
+          .pl-ellipsized;
+          flex-grow: 1;
+        }
+        &:last-child {
+          flex-shrink: 0;
+          box-sizing: content-box;
+          width: 1rem;
+        }
       }
       .pl-icon {
         fill: @gray-lightest;
