Make assets list scroll

--- a/src/components/library.less
+++ b/src/components/library.less
@@ -46,6 +46,7 @@
     flex-grow: 1;
     box-shadow: inset 0 1px @shadow-dark;
     background-color: @gray-darker;
+    overflow: auto;
     position: relative;
     &.pl-highlighted {
       z-index: 1;
