Write bar color styles differently

--- a/src/components/timeline-layer.less
+++ b/src/components/timeline-layer.less
@@ -18,10 +18,10 @@
     .pl-timeline-layer-top-bar {
       background-color: @gray-lightest;
       &[type="text"] {
-        background-color: mix(@gray-lightest, @text-layer-color, 25%);
+        background-color: mix(@text-layer-color, @gray-lightest, 75%);
       }
       &[type="image"] {
-        background-color: mix(@gray-lightest, @image-layer-color, 25%);
+        background-color: mix(@image-layer-color, @gray-lightest, 75%);
       }
     }
   }
