Make selected assets lighter

--- a/src/components/library.less
+++ b/src/components/library.less
@@ -13,7 +13,7 @@
     display: flex;
     flex-shrink: 0;
     height: 4.75rem;
-    box-shadow: 0 1px @shadow-dark;
+    border-bottom: 1px solid @shadow-dark;
     position: relative;
     z-index: 1;
     .pl-library-preview-thumb {
@@ -81,7 +81,7 @@
       }
       &.pl-selected {
         color: white;
-        background-color: @gray-dark;
+        background-color: @gray;
         .pl-icon {
           fill: white;
         }
