--- a/src/main.less
+++ b/src/main.less
@@ -2,6 +2,7 @@
 @import './variables';
 
 @import './components/button';
+@import './components/control';
 @import './components/icon';
 @import './components/text-field';
 @import './components/app';
