--- a/src/components/timeline-layer.less
+++ b/src/components/timeline-layer.less
@@ -163,6 +163,7 @@
         height: @font-size-smaller / 1.5;
         box-shadow: @box-shadow-small;
         background-color: @gray-lightest;
+        cursor: pointer;
         position: absolute;
         top: 50%;
         transform: translate(-50%, -50%) rotate(45deg);
