Change the name to Scrolly Viewer

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -6,7 +6,7 @@
 @text-layer-color: blue;
 @image-layer-color: red;
 
-.pl-app {
+.sv-app {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -15,13 +15,13 @@
   position: absolute;
   top: 0;
   left: 0;
-  .pl-app-content {
+  .sv-app-content {
     display: flex;
     flex-grow: 1;
     border-bottom: 1px solid black;
     background-color: @gray-dark;
   }
-  .pl-app-viewport-wrapper {
+  .sv-app-viewport-wrapper {
     display: flex;
     align-items: center;
     flex-grow: 1;
