--- a/src/components/button.less
+++ b/src/components/button.less
@@ -1,4 +1,4 @@
-.pl-button {
+.sv-button {
   box-shadow: none;
   &:hover, &:focus {
     background-color: @shadow;
@@ -7,7 +7,7 @@
     background-color: @shadow-dark;
   }
 
-  .pl-icon {
+  .sv-icon {
     fill: white;
   }
 }
