--- a/src/components/control.less
+++ b/src/components/control.less
@@ -1,9 +1,9 @@
-.pl-control {
+.sv-control {
   display: flex;
   justify-content: space-between;
   flex-shrink: 0;
   padding: 0 @padding-small;
-  .pl-text-field {
+  .sv-text-field {
     padding-right: @padding-smaller;
     box-shadow: 0 1px @shadow;
     position: relative;
@@ -26,21 +26,21 @@
       }
     }
   }
-  .pl-control-actions {
+  .sv-control-actions {
     display: flex;
     align-items: center;
     flex-shrink: 0;
-    .pl-control-action {
+    .sv-control-action {
       margin-left: @padding-small;
-      &.pl-clickable {
+      &.sv-clickable {
         cursor: pointer;
       }
 
-      .pl-icon {
+      .sv-icon {
         width: @padding-base;
         height: @padding-base;
       }
-      .pl-text-field {
+      .sv-text-field {
         padding-right: 0;
         padding-left: @padding-smaller;
         &:before {
