--- a/src/components/library.less
+++ b/src/components/library.less
@@ -1,6 +1,6 @@
 @library-width: 20rem;
 
-.pl-library {
+.sv-library {
   display: flex;
   flex-direction: column;
   width: @library-width;
@@ -9,14 +9,14 @@
   overflow: hidden;
   position: relative;
   z-index: 0;
-  .pl-library-preview {
+  .sv-library-preview {
     display: flex;
     flex-shrink: 0;
     height: 4.75rem;
     border-bottom: 1px solid @shadow-dark;
     position: relative;
     z-index: 1;
-    .pl-library-preview-thumb {
+    .sv-library-preview-thumb {
       display: flex;
       flex-shrink: 0;
       align-items: center;
@@ -29,17 +29,17 @@
         max-width: 100%;
         max-height: 100%;
       }
-      .pl-icon {
+      .sv-icon {
         width: 40%;
         height: 40%;
         fill: @gray;
       }
     }
-    .pl-library-preview-info {
+    .sv-library-preview-info {
       padding: @padding-small 1rem;
       overflow: hidden;
       h5 {
-        .pl-ellipsized;
+        .sv-ellipsized;
         color: white;
       }
       h6 {
@@ -47,12 +47,12 @@
       }
     }
   }
-  .pl-library-assets {
+  .sv-library-assets {
     flex-grow: 1;
     background-color: @gray-darker;
     overflow: auto;
     position: relative;
-    &.pl-highlighted {
+    &.sv-highlighted {
       z-index: 1;
       &:after {
         content: '';
@@ -63,12 +63,12 @@
         top: 0;
         left: 0;
       }
-      &.pl-dragging:after {
+      &.sv-dragging:after {
         background-color: @shadow;
       }
     }
 
-    .pl-library-asset {
+    .sv-library-asset {
       display: flex;
       align-items: center;
       font-size: @font-size-smaller;
@@ -79,10 +79,10 @@
       &:hover {
         color: mix(@gray-lightest, white);
       }
-      &.pl-selected {
+      &.sv-selected {
         color: white;
         background-color: @gray;
-        .pl-icon {
+        .sv-icon {
           fill: white;
         }
       }
@@ -91,7 +91,7 @@
         display: block;
         padding: @padding-small;
         &:first-child {
-          .pl-ellipsized;
+          .sv-ellipsized;
           flex-grow: 1;
           font-size: @font-size-small;
         }
@@ -101,7 +101,7 @@
           width: 1rem;
         }
       }
-      .pl-icon {
+      .sv-icon {
         fill: @gray-lightest;
         &:hover {
           fill: white;
