--- a/src/components/viewport.less
+++ b/src/components/viewport.less
@@ -1,6 +1,6 @@
 @import './viewport-layer';
 
-.pl-viewport {
+.sv-viewport {
   width: 100%;
   height: 100%;
   margin: 0 auto;
@@ -8,7 +8,7 @@
   background-color: white;
   overflow: hidden;
   position: relative;
-  &.pl-dragging {
+  &.sv-dragging {
     box-shadow: 0 0 0 3px @brand-primary, @box-shadow-large;
   }
 }
