--- a/src/main.less
+++ b/src/main.less
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
-.pl-ellipsized {
+.sv-ellipsized {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
