--- a/src/components/viewport-layer.less
+++ b/src/components/viewport-layer.less
@@ -13,6 +13,11 @@
       display: block;
     }
   }
+  &[type="dummy"] {
+    &:not(:hover)&:not(.sv-selected) .sv-viewport-layer-borders {
+      opacity: 0.25;
+    }
+  }
   &[type="text"] {
     .sv-viewport-layer-borders .sv-viewport-layer-border {
       background-color: @text-layer-color;
@@ -50,18 +55,22 @@
     pointer-events: none;
     opacity: 0;
     .sv-viewport-layer-border {
+      box-sizing: content-box;
+      background-color: black;
       position: absolute;
       top: 0;
       left: 0;
       &:nth-child(odd) {
         width: 100%;
         height: 1px;
-        transform: translateY(-50%);
+        padding-left: 1px;
+        transform: translate(-0.5px, -50%);
       }
       &:nth-child(even) {
         width: 1px;
         height: 100%;
-        transform: translateX(-50%);
+        padding-top: 1px;
+        transform: translate(-50%, -0.5px);
       }
       &:nth-child(3) {
         top: 100%;
