--- a/src/variables.less
+++ b/src/variables.less
@@ -13,3 +13,7 @@
 @highlight-light: fade(white, 5%);
 @highlight: fade(white, 10%);
 @highlight-dark: fade(white, 25%);
+
+@dummy-layer-color: purple;
+@text-layer-color: blue;
+@image-layer-color: red;
