--- a/src/components/viewport.less
+++ b/src/components/viewport.less
@@ -6,9 +6,20 @@
   margin: 0 auto;
   box-shadow: @box-shadow-large;
   background-color: white;
-  overflow: hidden;
   position: relative;
   &.sv-dragging {
     box-shadow: 0 0 0 3px @brand-primary, @box-shadow-large;
+  }
+
+  > .sv-viewport-layer .sv-viewport-layer-content {
+    visibility: hidden;
+  }
+  .sv-viewport-layers {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
