Add a publish button and dialog

--- a/src/components/header.less
+++ b/src/components/header.less
@@ -1,7 +1,10 @@
 .sv-header {
   flex-shrink: 0;
-  height: 4.5rem;
+  padding: @padding-base;
   box-shadow: 0 1px @shadow;
   background-color: @brand-primary;
   position: relative;
+  .sv-header-content {
+    text-align: right;
+  }
 }
