--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -43,6 +43,7 @@
       }
       .sv-timeline-header-menu-add {
         flex-shrink: 0;
+        box-shadow: none;
         position: relative;
         &.pl-active .sv-icon {
           transform: translate(-50%, -50%) rotate(90deg);
