--- a/src/components/button.less
+++ b/src/components/button.less
@@ -1,5 +1,6 @@
 .sv-button {
-  box-shadow: none;
+  box-shadow: inset 0 0 0 1px white;
+  color: white;
   &:hover, &:focus {
     background-color: @shadow;
   }
